--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,4 +1,5 @@
-* {
+*,
+body {
   margin: 0;
   padding: 0;
 }
@@ -11,7 +12,6 @@ body {
 
 main {
   height: 100vh;
-  width: 100vw;
   display: flex;
   justify-content: center;
 }
