--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,20 @@
 *,
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+*,
 body {
   margin: 0;
   padding: 0;
+}
+
+h1,
+h2,
+h3 {
+  margin: 0;
 }
 
 body {
@@ -18,6 +31,7 @@ main {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  overflow-x: hidden;
 }
 
 .hero {
